// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders correctly with blue background 1`] = `
<h1
  style={
    Object {
      "backgroundColor": "blue",
    }
  }
>
  Welcome!
</h1>
`;

exports[`App component renders correctly with red background 1`] = `
<h1
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  Welcome!
</h1>
`;
